--- a/app/views/chats/chat_members/_list.slim
+++ b/app/views/chats/chat_members/_list.slim
@@ -1,6 +1,6 @@
 - if squad_members.count == 0
   .chat-member-wrapper.no-members
-    h5 You squad members list is empty.
+    h5 No squad members to add.
     
 - else
   .chat-member-wrapper
