--- a/app/webpack/stylesheets/chats/index.scss
+++ b/app/webpack/stylesheets/chats/index.scss
@@ -135,9 +135,16 @@
           align-items: center;
           height: 100%;
           word-break: break-all;
-          overflow: scroll;
           margin-left: 16px;
           font-size: 16px;
+          overflow-y: scroll;
+          // Hide scroll bar
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+        }
+        
+        .title::-webkit-scrollbar {
+          display: none; /*Chrome, Safari and Opera */
         }
       }
       
