--- a/app/webpack/stylesheets/chats/members_list.scss
+++ b/app/webpack/stylesheets/chats/members_list.scss
@@ -1,7 +1,11 @@
 .chat-member-wrapper {
   width: 100%;
   height: 50vh;
-  overflow: scroll;
+  overflow-y: scroll;
+  // Hide scroll bar
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  
   &.no-members { height: auto }
   
   .chat-member-card {
@@ -55,4 +59,8 @@
       }
     }
   }
+}
+
+.chat-member-wrapper::-webkit-scrollbar {
+  display: none; /*Chrome, Safari and Opera */
 }
