--- a/app/webpack/stylesheets/groups/groups.scss
+++ b/app/webpack/stylesheets/groups/groups.scss
@@ -8,6 +8,9 @@
     padding-left: 0;
     height: 50vh;
     overflow-y: scroll;
+    // Hide scroll bar
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
     
     p { color: $color-black; }
     .group-scroll .group-wrapper { padding-left: 0; }
@@ -116,4 +119,8 @@
       }
     }
   }
+}
+
+.content-group-wrapper.modal-view::-webkit-scrollbar {
+  display: none; /*Chrome, Safari and Opera */
 }
