--- a/app/webpack/stylesheets/chats/chat_message.scss
+++ b/app/webpack/stylesheets/chats/chat_message.scss
@@ -6,82 +6,93 @@
     border: 1px solid green;
     
     .message-wrapper {
-      display: inline-flex;
-      flex-direction: column;
-      word-break: break-word;
-      max-width: 70%;
-      background-color: $color-light-grey;
-      border-radius: 4px 4px 4px 0px;
-      padding: 8px 12px;
-      color: $color-black;
+      display: flex;
+      .photo-wrapper {
+        display: flex;
+        align-items: flex-end;
+        .photo {}
+      }
       
-      .header {
-        display: inline-flex;
-        align-items: center;
-        padding-bottom: 12px;
-        
-        .photo {
-          display: flex;
-          align-items: center;
-          
-          .profile-image {
-            height: 20px;
-            width: 20px;
+      .content-wrapper {
+        display: flex;
+        flex-direction: column;
+        background-color: $color-light-grey;
+        position: relative;
+        margin-left: 10px;
+        padding: 4px 12px 4px 24px;
+        border-radius: 4px 4px 4px 0;
+
+        .header {
+          .name {
+            color: $color-blue;
+            font-size: 16px;
           }
         }
         
-        .name {
-          display: flex;
-          align-items: center;
-          padding: 0 12px;
+        .body {
+          .text {
+            color: $color-black;
+            font-size: 16px;
+          }
+        }
+        
+        .footer {
+          .date {
+            display: flex;
+            justify-content: flex-end;
+            color: $color-grey;
+            font-size: 12px;
+          }
         }
       }
       
-      .body {
-        display: flex;
-        align-items: flex-start;
-        flex-direction: column;
-        
-        .text {}
-        .image {
-          display: flex;
-          justify-content: center;
-          height: 200px;
-          min-width: 200px;
-          img {height: 100%;}
-        }
-        
-        .video {}
-        .audio {}
+      .content-wrapper:before {
+        content: "";
+        width: 10px;
+        height: 20px;
+        position: absolute;
+        background-color: $color-light-grey;
+        left: -10px;
+        bottom: 0;
+        border-radius: 0 0 0 1px;
       }
       
-      .footer {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        justify-content: flex-end;
-        
-        .date {
-          font-size: 12px;
-          color: $color-grey;
-        }
-        
-        .review-icon {
-          display: flex;
-          align-items: center;
-          padding: 0 4px;
-        }
+      .content-wrapper:after {
+        content: "";
+        position: absolute;
+        width: 10px;
+        height: 20px;
+        left: -10px;
+        bottom: 0px;
+        clip-path: ellipse(15px 20px at -45% 0%);
+        background-color: $color-white;
       }
     }
   }
 }
 
+
+// Owner ChatMessage style
 .chat-message-board .message-box-wrapper.message-owner {
   justify-content: flex-end;
   
   .message-wrapper {
-    background-color: $color-blue;
-    color: $color-white;
-    border-radius: 4px 4px 0px 4px;
+    .content-wrapper {
+      background-color: $color-blue;
+      border-radius: 4px 4px 0px 4px;
+      padding: 8px 12px 4px 12px;
+    }
+    
+    .photo-wrapper { display: none; }
+    .header { display: none }
+    
+    .body {
+      .text {
+        color: $color-white;
+        font-size: 16px;
+      }
+    }
+    
+    .content-wrapper:before, .content-wrapper:after { content: none; }
   }
 }
