Add default styles for ChatAssets

--- a/app/views/chat_messages/assets/_chat_assets_modal.slim
+++ b/app/views/chat_messages/assets/_chat_assets_modal.slim
@@ -2,7 +2,7 @@
   .modal-dialog.modal-dialog-centered.modal-lg
     .modal-content
       .modal-header
-        h4.modal-title Assets
+        h4.modal-title My Assets
         button.close aria-label="Close" data-dismiss="modal" type="button"
           = image_pack_tag('media/images/icons/ic_close.png')
           
@@ -11,6 +11,8 @@
           ul
             li
               a href="#tab0" Images
+            li
+              span.divider
             li
               a href="#tab1" Videos
               
