--- a/app/webpack/stylesheets/chats/chat_message.scss
+++ b/app/webpack/stylesheets/chats/chat_message.scss
@@ -34,6 +34,14 @@
             color: $color-black;
             font-size: 16px;
           }
+          
+          .image {
+            display: flex;
+            justify-content: center;
+            height: 200px;
+            min-width: 200px;
+            img { height: 100%; }
+          }
         }
         
         .footer {
