--- a/app/webpack/stylesheets/posts/show.scss
+++ b/app/webpack/stylesheets/posts/show.scss
@@ -87,20 +87,35 @@
 
 // Images
 .post-images-wrapper {
+  display: flex;
+  flex-wrap: wrap;
   overflow: auto;
   max-height: 600px;
   
   .image-card {
-    display: inline;
+    display: flex;
+    align-items: center;
+    width: 48%;
+    margin: 1%;
+    height: 220px;
+    text-align: center;
+    overflow: hidden;
+    cursor: pointer;
     
     img {
-      cursor: pointer;
-      padding: 10px;
-      width: 50%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      text-align: center;
     }
-    
-    img:hover { padding: 14px; }
   }
+  
+  .image-card:hover {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 10px solid $color-white;
+   }
 }
 
 @media (max-width: map-get($grid-breakpoints, "md")) {
