--- a/app/views/chat_messages/_messages.slim
+++ b/app/views/chat_messages/_messages.slim
@@ -31,12 +31,12 @@
           - when 'video'
             .video
               - if chat_message.video.present?
-                video controls="" width="100%"
+                video controls="" width="350"
                   source src="#{chat_message.video.url}" type="video/mp4"
                     span Sorry, your browser doesn't support embedded videos.
                       
               - elsif chat_message.asset_source.present?
-                video controls="" width="100%" height="250" preload="none"
+                video controls="" width="350" height="250" preload="none"
                   source src="#{chat_message.asset_source.file.url}" type="video/mp4"
                     span Sorry, your browser doesn't support embedded videos.
               - else
