Add style for Chat audio message recorder

--- a/app/views/chat_messages/_new.slim
+++ b/app/views/chat_messages/_new.slim
@@ -1,13 +1,32 @@
 .chat-input
-  = form_for ChatMessage.new, url: chat_chat_messages_path(@chat.access_token), remote: true, authenticity_token: true, html: { method: :post } do |f|
-    = f.hidden_field :message_type, value: 'text'
-    .input-group
-      .input-group-prepend
-        .input-group-text
-          = image_pack_tag('media/images/icons/ic_chat_document.png', class: 'img-responsive', id: 'chat-assset-button')
-          
-      = f.text_field :text, class: 'form-control', placeholder: 'Write a message', autocomplete: false
+  .text-message.active#text-message-form
+    = form_for ChatMessage.new, url: chat_chat_messages_path(@chat.access_token), remote: true, authenticity_token: true, html: { method: :post } do |f|
+      = f.hidden_field :message_type, value: 'text'
+      .input-group
+        .input-group-prepend
+          .input-group-text
+            = image_pack_tag('media/images/icons/ic_chat_document.png', class: 'img-responsive', id: 'chat-assset-button')
+            
+        = f.text_field :text, class: 'form-control', placeholder: 'Write a message', autocomplete: false
+        
+        .input-group-append
+          .input-group-text.align-items-center
+            // Submit button
+            = f.submit '', class: 'btn btn-link send-message-button no-border', id: 'chat-message-submit'
+            
+            // Record button
+            .chat-record-button#chat-record-button
+              = image_pack_tag('media/images/icons/ic_microphone.png', class: 'img-responsive')
+            
+  .audio-record#audio-record-form
+    .timer-wrapper
+      .ic-record
+      .timer
+        span 0:00
+        
+    .record-button-wrapper
+      span Click to cancel
       
-      .input-group-append
-        .input-group-text.align-items-center
-          = f.submit '', class: 'btn btn-link send-message-button no-border'
+      // Record button
+      .chat-record-button.active#chat-record-button
+        = image_pack_tag('media/images/icons/ic_microphone.png', class: 'img-responsive')
