--- a/app/webpack/stylesheets/chats/index.scss
+++ b/app/webpack/stylesheets/chats/index.scss
@@ -1,5 +1,6 @@
 @import './chat_assets';
 @import './chat_message';
+@import './chat_input';
 @import './members_list';
 @import './control_panel';
 @import './icon_uploader';
@@ -164,17 +165,6 @@
       overflow: scroll;
       width: 100%;
       height: calc(100% - (56px + 49px));
-    }
-    
-    .chat-input {
-      display: flex;
-      align-items: center;
-      padding: 0 20px;
-      width: 100%;
-      height: 49px;
-      border-top: 1px solid $color-light-grey;
-      
-      form { width: 100%; }
     }
   }
   
