Add dynamic timer for audio record

--- a/app/views/chat_messages/_new.slim
+++ b/app/views/chat_messages/_new.slim
@@ -22,7 +22,10 @@
     .timer-wrapper
       .ic-record
       .timer
-        span 0:00
+        span#minutes 00
+        span
+          |:
+        span#seconds 00
         
     .record-button-wrapper
       span Click to cancel
