Finish with audio player for Web

--- a/app/webpack/stylesheets/chats/chat_input.scss
+++ b/app/webpack/stylesheets/chats/chat_input.scss
@@ -62,5 +62,5 @@
     }
   }
   
-  .input-group-prepend, .input-group-append, .chat-record-button { cursor: pointer; }
+  .input-group-prepend, .input-group-append, .chat-record-button, .chat-clear-record-button { cursor: pointer; }
 }
