--- a/app/views/chat_messages/_new.slim
+++ b/app/views/chat_messages/_new.slim
@@ -15,7 +15,7 @@
             = f.submit '', class: 'btn btn-link send-message-button no-border', id: 'chat-message-submit'
             
             // Record button
-            .chat-record-button#chat-record-button
+            .chat-record-button#chat-start-record-button
               = image_pack_tag('media/images/icons/ic_microphone.png', class: 'img-responsive')
             
   .audio-record#audio-record-form
@@ -28,8 +28,11 @@
         span#seconds 00
         
     .record-button-wrapper
-      span Click to cancel
+      span.chat-clear-record-button#chat-clear-record-button Click to cancel
       
       // Record button
-      .chat-record-button.active#chat-record-button
+      .chat-record-button.active#chat-stop-record-button
         = image_pack_tag('media/images/icons/ic_microphone.png', class: 'img-responsive')
+        
+  .audio-record#audio-record-pending-form
+    span Audio record saving ...
