Add lable with new date for Chat board on Web

--- a/app/views/chat_messages/_message_to_broadcast.slim
+++ b/app/views/chat_messages/_message_to_broadcast.slim
@@ -1,4 +1,4 @@
-.message-box-wrapper data-message-id="#{chat_message.id}"
+.message-box-wrapper data-message-id="#{chat_message.id}" data-message-datetime="#{chat_message.created_at.strftime('%Y-%m-%d %H:%M:%S %z')}"
   .message-wrapper
     .photo-wrapper
       .photo
