--- a/app/webpack/stylesheets/chats/chat_message.scss
+++ b/app/webpack/stylesheets/chats/chat_message.scss
@@ -79,6 +79,15 @@
       }
     }
   }
+  
+  .message-date-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 8px 0;
+    font-size: 14px;
+    font-weight: 500;
+  }
 }
 
 
