Add Twilio methods for Programmable Video

--- a/app/views/chats/chat_board/_new_board.slim
+++ b/app/views/chats/chat_board/_new_board.slim
@@ -13,7 +13,7 @@
       = @chat.name
       
   .control-info
-    .control-element
+    .control-element#twilio-video-call
       = image_pack_tag('media/images/icons/ic_chat_videocam.png')
     .control-element
       = image_pack_tag('media/images/icons/ic_chat_phone.png')
