--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -17,7 +17,8 @@ html
     
   body
     nav.navbar.navbar-expand-lg.navbar-light
-      = image_pack_tag('media/images/screade-logo-main.png', id: 'navbar-logo')
+      = link_to root_path do
+        = image_pack_tag('media/images/screade-logo-main.png', id: 'navbar-logo')
       button.navbar-toggler aria-controls="navbarSupportedContent" aria-expanded="false" aria-label=("Toggle navigation") data-target="#navbarSupportedContent" data-toggle="collapse" type="button"
         span.navbar-toggler-icon
       #navbarSupportedContent.collapse.navbar-collapse.justify-content-between
