Add Admin posts table to BreakingNews panel

--- a/app/views/posts/_show.slim
+++ b/app/views/posts/_show.slim
@@ -53,5 +53,5 @@
     .post-title
       = post.title
     .post-description
-      = auto_link(post.description, :html => { :target => '_blank' })
+      = auto_link(post.description&.gsub(/\n/, '<br>').html_safe, html: { target: '_blank' })
       
