Update Breaking news style

--- a/app/views/home/_breaking_news.slim
+++ b/app/views/home/_breaking_news.slim
@@ -2,8 +2,8 @@
   .breaking-news-label
     | Breaking News
   
-  .breaking-news-text-wrapper
-    = link_to post_post_comments_path(post), class: 'breaking-news-layout' do
+  = link_to post_post_comments_path(post), class: 'breaking-news-text-wrapper' do
+    .breaking-news-layout
       .arrow-right
     .breaking-news
       #webticker
