--- a/app/webpack/stylesheets/home/breaking_news.scss
+++ b/app/webpack/stylesheets/home/breaking_news.scss
@@ -24,6 +24,7 @@
   height: 100%;
   width: 100%;
   overflow:hidden;
+  color: $color-black;
 }
 
 .breaking-news-wrapper .breaking-news-text-wrapper .breaking-news-layout {
