Update Breaking New ticker

--- a/app/views/home/_breaking_news.slim
+++ b/app/views/home/_breaking_news.slim
@@ -6,5 +6,5 @@
     .breaking-news-layout
       .arrow-right
     .breaking-news
-      #webticker
-        li #{post.title}
+      .marquee3k data-speed="1"
+        span #{post.title}
