Add ability to mute/unmute Twilio Video/Audio

--- a/app/views/chat_video_rooms/new.slim
+++ b/app/views/chat_video_rooms/new.slim
@@ -3,6 +3,8 @@ span #{@chat_video_room.attributes}
 #chat-video-room data-twilio-video-token="#{@chat_video_room_user_token}" data-room-name="#{@chat_video_room.name}"
 
 button#disconect-from-video-chat Leave
+button#mute-audio MuteAudio
+button#mute-video MuteVideo
 
 #video-chat-local-media
 
