--- a/app/views/chat_messages/_message_to_broadcast.slim
+++ b/app/views/chat_messages/_message_to_broadcast.slim
@@ -50,6 +50,13 @@
             - else
               span Audio record cannot be played.
               
+        - when 'video-room'
+          .video-room
+            - if chat_message.chat_room_source.status == 'completed'
+              span  Video call #{chat_message.chat_room_source.status}
+            - else
+              = link_to "Join to the video chat #{chat_message.chat_room_source.participants_count}/50", new_chat_chat_video_room_path(chat_message.chat.access_token)
+              
         .footer
           .date
             = hours_minutes(chat_message.created_at)
