--- a/app/views/chat_messages/_messages.slim
+++ b/app/views/chat_messages/_messages.slim
@@ -67,7 +67,7 @@
               - if chat_message.chat_room_source.status == 'completed'
                 span  Video call #{chat_message.chat_room_source.status}
               - else
-                = link_to "Join to the video chat #{chat_message.chat_room_source.participants_count}/50", new_chat_chat_video_room_path(@chat.access_token)
+                = link_to "Join to the video chat #{chat_message.chat_room_source.participants_count}/50", new_chat_chat_video_room_path(chat_message.chat.access_token)
                 
           .footer
             .date
