--- a/app/views/chat_messages/_message_to_broadcast.slim
+++ b/app/views/chat_messages/_message_to_broadcast.slim
@@ -1,4 +1,4 @@
-.message-box-wrapper data-message-id="#{chat_message.id}" data-message-datetime="#{chat_message.created_at.strftime('%Y-%m-%d %H:%M:%S %z')}" data-twilio-id="#{chat_message.message_type == 'video-room' || chat_message.message_type == 'audio-room' ? chat_message.chat_room_source.sid : ''}"
+.message-box-wrapper class="#{chat_message.chat_room_source.present? ? 'message-owner' : ''}" data-message-id="#{chat_message.id}" data-message-type="#{chat_message.message_type}" data-message-datetime="#{chat_message.created_at.strftime('%Y-%m-%d %H:%M:%S %z')}"
   .message-wrapper
     .photo-wrapper
       .photo
