--- a/app/views/chat_messages/_messages.slim
+++ b/app/views/chat_messages/_messages.slim
@@ -10,7 +10,7 @@
       span #{new_datetime.strftime('%A %d.%m.%Y')}
 
   // ChatMessage template
-  .message-box-wrapper data-message-id="#{chat_message.id}" data-message-datetime="#{chat_message_datetime.strftime('%Y-%m-%d %H:%M:%S %z')}" class="#{chat_message.user == current_user || chat_message.chat_room_source.present? ? 'message-owner' : ''}" data-twilio-id="#{chat_message.message_type == 'video-room' || chat_message.message_type == 'audio-room' ? chat_message.chat_room_source.sid : ''}"
+  .message-box-wrapper data-message-id="#{chat_message.id}" data-message-type="#{chat_message.message_type}" data-message-datetime="#{chat_message_datetime.strftime('%Y-%m-%d %H:%M:%S %z')}" class="#{chat_message.user == current_user || chat_message.chat_room_source.present? ? 'message-owner' : ''}"
     .message-wrapper
       .photo-wrapper
         .photo
