Add Chat call panel view for Web

--- a/app/webpack/stylesheets/chats/index.scss
+++ b/app/webpack/stylesheets/chats/index.scss
@@ -1,6 +1,7 @@
 @import './chat_assets';
 @import './chat_message';
 @import './chat_input';
+@import './chat_video_call';
 @import './members_list';
 @import './control_panel';
 @import './icon_uploader';
