--- a/app/views/chats/index.slim
+++ b/app/views/chats/index.slim
@@ -13,3 +13,74 @@
       = image_pack_tag('media/images/icons/ic_plus.png', class: 'plus-with-border')
       
 = render 'chats/chat_modals/new_chat'
+
+// Audio call
+//.call-control-panel
+  .call-space-wrapper
+  
+  .call-buttons
+      
+    //.button
+      i.ic-button.video.on
+      
+    //.button.inactive
+      i.ic-button.video.off
+      
+    //.button
+      i.ic-button.volume.on
+      
+    //.button.inactive
+      i.ic-button.volume.off
+      
+    .button
+      i.ic-button.microphone.on
+      
+    //.button.inactive
+      i.ic-button.microphone.off
+      
+    .button.call-end
+      i.ic-button.call-end
+  
+  .call-profiles-wrapper
+    .call-profiles
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+
+// Video call
+.call-control-panel
+  .call-buttons
+      
+    .button
+      i.ic-button.video.on
+      
+    //.button.inactive
+      i.ic-button.video.off
+      
+    //.button
+      i.ic-button.volume.on
+      
+    //.button.inactive
+      i.ic-button.volume.off
+      
+    .button
+      i.ic-button.microphone.on
+      
+    //.button.inactive
+      i.ic-button.microphone.off
+      
+    .button.call-end
+      i.ic-button.call-end
