Update Twilio call view(working on)

--- a/app/views/chat_video_rooms/new.slim
+++ b/app/views/chat_video_rooms/new.slim
@@ -1,11 +1,82 @@
-h2 Welcome to Video Chat
-span #{@chat_video_room.attributes}
 #chat-video-room data-twilio-video-token="#{@chat_video_room_user_token}" data-room-name="#{@chat_video_room.name}"
 
-button#disconect-from-video-chat Leave
-button#mute-audio MuteAudio
-button#mute-video MuteVideo
+.video-chat-header
+  button#disconect-from-video-chat Leave
+  button#mute-audio MuteAudio
+  button#mute-video MuteVideo
 
-#video-chat-local-media
 
-#video-chat-remote-media
+.video-chat-content#video-chat-content
+  //.video-chat-sceen
+    video
+    
+// Audio call
+//.call-control-panel
+  .call-space-wrapper
+  
+  .call-buttons
+      
+    //.button
+      i.ic-button.video.on
+      
+    //.button.inactive
+      i.ic-button.video.off
+      
+    //.button
+      i.ic-button.volume.on
+      
+    //.button.inactive
+      i.ic-button.volume.off
+      
+    .button
+      i.ic-button.microphone.on
+      
+    //.button.inactive
+      i.ic-button.microphone.off
+      
+    .button.call-end
+      i.ic-button.call-end
+  
+  .call-profiles-wrapper
+    .call-profiles
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+      .profile-image
+
+// Video call
+//.call-control-panel
+  .call-buttons
+      
+    .button
+      i.ic-button.video.on
+      
+    //.button.inactive
+      i.ic-button.video.off
+      
+    //.button
+      i.ic-button.volume.on
+      
+    //.button.inactive
+      i.ic-button.volume.off
+      
+    .button
+      i.ic-button.microphone.on
+      
+    //.button.inactive
+      i.ic-button.microphone.off
+      
+    .button.call-end
+      i.ic-button.call-end
