--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -10,6 +10,7 @@ $color-black: #000000;
 $color-red: #DA100B;
 $color-grey: #9C9C9C;
 $color-light-grey: #EBF0F3;
+$color-dark-grey: #272727;
 $color-white: #FFFFFF;
 
 // Sizes
@@ -75,6 +76,11 @@ html, body {
   //border: 1px solid green;
   font-family: 'roboto';
   font-weight: 400; // 900, 700, 500, 400, 300
+  
+  &.twilio {
+    background-color: $color-dark-grey;
+    padding: 0;
+  }
 }
 
 // Prevent text from selection
