--- a/app/webpack/stylesheets/chats/chat_video_call.scss
+++ b/app/webpack/stylesheets/chats/chat_video_call.scss
@@ -133,12 +133,23 @@
     // background-color: $color-black;
     
     video {
+      object-fit: cover;
       width: 100%;
+      height: 100%;
       max-height: 300px;
     }
     
     &.dominant-speaker {
       border: 4px solid green;
+    }
+  }
+  
+  .video-chat-sceen {
+    &.video-mute:after {
+      content: url('../images/icons/chat_calls/ic_video_off.png');
+      position: absolute;
+      top: 10px;
+      right: 10px;
     }
   }
   
@@ -153,6 +164,7 @@
     padding: 0 20px;
     background-color: $color-black;
     color: $color-white;
+    z-index: 1;
     
     height: 14%;
     font-size: 1em;
