--- a/app/webpack/stylesheets/chats/index.scss
+++ b/app/webpack/stylesheets/chats/index.scss
@@ -1,4 +1,5 @@
 @import './chat_assets';
+@import './chat_audio_call';
 @import './chat_message';
 @import './chat_input';
 @import './chat_video_call';
