--- a/app/webpack/stylesheets/chats/chat_message.scss
+++ b/app/webpack/stylesheets/chats/chat_message.scss
@@ -110,7 +110,7 @@
         font-size: 16px;
       }
       
-      .video-room {
+      .video-room, .audio-room {
         color: $color-white;
         a {
           color: $color-white;
