--- a/app/views/chat_audio_rooms/new.slim
+++ b/app/views/chat_audio_rooms/new.slim
@@ -1,10 +1,20 @@
-#chat-audio-room data-chat-token="#{@chat_audio_room.chat.access_token}" data-twilio-video-token="#{@chat_audio_room_user_token}" data-room-name="#{@chat_audio_room.name}"
+#chat-audio-room data-chat-token="#{@chat_audio_room.chat.access_token}" data-twilio-video-token="#{@chat_audio_room_user_token}" data-room-name="#{@chat_audio_room.name}" data-default-user-image="#{asset_pack_path('media/images/placeholders/placeholder-user-profile.png')}"
 
 .audio-chat-header
 
-.audio-chat-content#video-chat-content
-  //.video-chat-sceen
-    video
+.audio-chat-content#audio-chat-content
+  .audio-main-content-wrapper
+    .main-content.self-user
+      - if current_user.profile_picture.url
+        = image_tag(current_user.profile_picture.square_320.url, class: 'user-icon')
+      - else
+        = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'user-icon')
+        
+      span You
+      
+    .main-content.no-participant#audio-remote-participant
+      = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'user-icon')
+      span
     
 // Audio call
 .call-control-panel
@@ -18,20 +28,4 @@
       i.ic-button.call-end
   
   .call-profiles-wrapper
-    .call-profiles
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
-      .profile-image
+    .call-profiles#audio-participants-list
