--- a/app/webpack/stylesheets/chats/chat_audio_call.scss
+++ b/app/webpack/stylesheets/chats/chat_audio_call.scss
@@ -49,3 +49,20 @@
     }
   }
 }
+
+@media (max-width: map-get($grid-breakpoints, "md")) {
+  .audio-chat-content .audio-main-content-wrapper .main-content {
+    justify-content: start;
+    
+    .user-icon {
+      width: 80px;
+      height: 80px;
+    }
+    
+    span {
+      font-size: 24px;
+      font-weight: 500;
+      text-align: center;
+    }
+  }
+}
