--- a/app/views/notifications/_index.slim
+++ b/app/views/notifications/_index.slim
@@ -18,6 +18,10 @@
             = image_pack_tag('media/images/icons/notifications/ic_notification_event.png')
           - when 'ChatMessage'
             = image_pack_tag('media/images/icons/notifications/ic_notification_replied_comment.png')
+          - when 'ChatAudioRoom'
+            = image_pack_tag('media/images/icons/notifications/ic_notification_new_video.png')
+          - when 'ChatVideoRoom'
+            = image_pack_tag('media/images/icons/notifications/ic_notification_new_video.png')
           - when 'Comment'
             = image_pack_tag('media/images/icons/notifications/ic_notification_replied_comment.png')
           - when 'Post'
@@ -29,7 +33,7 @@
             - if notification.is_user_type?
               span
                 = notification.sender.full_name
-            - elsif notification.source_type == 'ChatMessage'
+            - elsif notification.source_type == 'ChatMessage' || notification.source_type == 'ChatAudioRoom' || notification.source_type == 'ChatVideoRoom'
             
             - elsif notification.source_type == 'Comment'
               = notification.source.message
